# sshush

./: .gitignore  .golangci.yaml  .goreleaser.yaml  .vale.ini  LICENSE  LICENSE.md  Makefile  README.md  example.yml  example2.yml  go.mod  go.sum  main.go  out.conf  pyproject.toml  readme.conf  setup.py
.github/styles/.vale-config/: 0-irwell.ini
.github/styles/Irwell/: Spelling.yml
.github/styles/config/dictionaries/: README.md
.github/styles/config/vocabularies/sshush/: accept.txt
.github/workflows/: ci.yml  docs.yml  release.yml
cmd/: cmd.go
flake/: default.nix  sshush.nix
sshush/: command_line.py  parser.go  parser.py  sshush.go  sshush.py  sshush_test.go
sshush/testdata/: aws.yml  bad-config.yml  circular.yml  ciscos.golden  ciscos.yml  ciscos2.golden  ciscos2.yml  dryrun.golden  example.golden  example.yml  example2.golden  example2.yml  prefix.golden  prefix.yml  prioritised.golden  prioritised_mixed.golden
