[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "sshush"
version = "1.5.0"
authors = [
  { name="Ben Cromwell", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://sshush.bencromwell.com"
"Bug Tracker" = "https://github.com/bencromwell/sshush/issues"
